[gd_scene load_steps=18 format=3 uid="uid://xu4ianhv1tl0"]

[ext_resource type="Script" uid="uid://bsww1834n3rh7" path="res://scenes/entities/orc/orc.gd" id="1_sxws1"]
[ext_resource type="SpriteFrames" uid="uid://kk8ifyc5d4kf" path="res://scenes/entities/orc/data/orc.tres" id="2_77e8p"]
[ext_resource type="Resource" uid="uid://d0jdyjs1mbug7" path="res://data/orc/orc_stats.tres" id="2_jqnmo"]
[ext_resource type="Script" uid="uid://drqwl4h286u12" path="res://components/enemy_health_component.gd" id="2_lr7qe"]
[ext_resource type="PackedScene" uid="uid://cw86ntwlxqf3f" path="res://scenes/entities/player/ghost.tscn" id="2_oot3s"]
[ext_resource type="Script" uid="uid://cljvbcc60xl7b" path="res://components/enemy_hit_box_component.gd" id="3_5aasi"]
[ext_resource type="Script" uid="uid://babmo0lj6opev" path="res://components/enemy_hurt_box_component.gd" id="4_ep8pi"]
[ext_resource type="Script" uid="uid://7agipnb73jsa" path="res://addons/godot_state_charts/state_chart.gd" id="6_l3us1"]
[ext_resource type="Script" uid="uid://5agk02xspk7j" path="res://addons/godot_state_charts/compound_state.gd" id="7_1va5h"]
[ext_resource type="Script" uid="uid://bmsajtbxc0ila" path="res://addons/godot_state_charts/atomic_state.gd" id="8_74pf7"]
[ext_resource type="Script" uid="uid://c4gb71tfig047" path="res://addons/godot_state_charts/transition.gd" id="9_8bb4w"]
[ext_resource type="Script" uid="uid://413jkijejw0r" path="res://components/orc/orc_animation.gd" id="11_68uhg"]
[ext_resource type="Script" uid="uid://b2mfla165mlak" path="res://components/orc/orc_skill.gd" id="12_jqnmo"]
[ext_resource type="Script" uid="uid://c02jjimwuaj2k" path="res://components/orc/orc_state.gd" id="13_ecwni"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yngm"]
size = Vector2(12, 17.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqr01"]
size = Vector2(12, 15.25)

[sub_resource type="CircleShape2D" id="CircleShape2D_54hmr"]
radius = 12.2729

[node name="Orc" type="CharacterBody2D"]
z_index = 40
scale = Vector2(4, 4)
script = ExtResource("1_sxws1")
orc_stats = ExtResource("2_jqnmo")

[node name="body" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="sprite" type="AnimatedSprite2D" parent="body"]
unique_name_in_owner = true
sprite_frames = ExtResource("2_77e8p")
animation = &"walk"
frame_progress = 0.0400745

[node name="EnemyHealthComponent" type="Node2D" parent="."]
script = ExtResource("2_lr7qe")

[node name="EnemyHitBoxComponent" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8
collision_mask = 8
script = ExtResource("3_5aasi")
damage = 1

[node name="EnemyHurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent")]
position = Vector2(0, -0.5)
collision_layer = 16
collision_mask = 0
script = ExtResource("4_ep8pi")
healthComponent = NodePath("../EnemyHealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBoxComponent"]
position = Vector2(0, 0.875)
shape = SubResource("RectangleShape2D_7yngm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -0.625)
shape = SubResource("RectangleShape2D_pqr01")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_54hmr")

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_l3us1")

[node name="root" type="Node" parent="StateChart"]
script = ExtResource("7_1va5h")
initial_state = NodePath("walk")

[node name="walk" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("8_74pf7")

[node name="to_die" type="Node" parent="StateChart/root/walk"]
script = ExtResource("9_8bb4w")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_attack" type="Node" parent="StateChart/root/walk"]
script = ExtResource("9_8bb4w")
to = NodePath("../../attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="to_run_away" type="Node" parent="StateChart/root/walk"]
script = ExtResource("9_8bb4w")
to = NodePath("../../runAway")
event = &"to_run_away"
delay_in_seconds = "0.0"

[node name="to_hit" type="Node" parent="StateChart/root/walk"]
script = ExtResource("9_8bb4w")
to = NodePath("../../hit")
event = &"to_hit"
delay_in_seconds = "0.0"

[node name="to_rage" type="Node" parent="StateChart/root/walk"]
script = ExtResource("9_8bb4w")
to = NodePath("../../Rage")
event = &"to_rage"
delay_in_seconds = "0.0"

[node name="die" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("8_74pf7")

[node name="attack" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("8_74pf7")

[node name="to_die" type="Node" parent="StateChart/root/attack"]
script = ExtResource("9_8bb4w")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/attack"]
script = ExtResource("9_8bb4w")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="to_run_away" type="Node" parent="StateChart/root/attack"]
script = ExtResource("9_8bb4w")
to = NodePath("../../runAway")
event = &"to_run_away"
delay_in_seconds = "0.0"

[node name="to_hit" type="Node" parent="StateChart/root/attack"]
script = ExtResource("9_8bb4w")
to = NodePath("../../hit")
event = &"to_hit"
delay_in_seconds = "0.0"

[node name="runAway" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("8_74pf7")

[node name="to_die" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("9_8bb4w")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("9_8bb4w")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="to_attack" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("9_8bb4w")
to = NodePath("../../attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="to_hit" type="Node" parent="StateChart/root/runAway"]
script = ExtResource("9_8bb4w")
to = NodePath("../../hit")
event = &"to_hit"
delay_in_seconds = "0.0"

[node name="hit" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("8_74pf7")

[node name="to_die" type="Node" parent="StateChart/root/hit"]
script = ExtResource("9_8bb4w")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/hit"]
script = ExtResource("9_8bb4w")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="to_attack" type="Node" parent="StateChart/root/hit"]
script = ExtResource("9_8bb4w")
to = NodePath("../../attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="to_run_away" type="Node" parent="StateChart/root/hit"]
script = ExtResource("9_8bb4w")
to = NodePath("../../runAway")
event = &"to_run_away"
delay_in_seconds = "0.0"

[node name="Rage" type="Node" parent="StateChart/root"]
unique_name_in_owner = true
script = ExtResource("8_74pf7")

[node name="to_die" type="Node" parent="StateChart/root/Rage"]
script = ExtResource("9_8bb4w")
to = NodePath("../../die")
event = &"to_die"
delay_in_seconds = "0.0"

[node name="to_walk" type="Node" parent="StateChart/root/Rage"]
script = ExtResource("9_8bb4w")
to = NodePath("../../walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="rageTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="toRageTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="OrcAnimations" type="Node" parent="." node_paths=PackedStringArray("enemy", "visual")]
unique_name_in_owner = true
script = ExtResource("11_68uhg")
enemy = NodePath("..")
visual = NodePath("../body")

[node name="OrcSkill" type="Node" parent="." node_paths=PackedStringArray("orc")]
unique_name_in_owner = true
script = ExtResource("12_jqnmo")
orc = NodePath("..")
ghost_node = ExtResource("2_oot3s")

[node name="OrcState" type="Node" parent="." node_paths=PackedStringArray("orc")]
unique_name_in_owner = true
script = ExtResource("13_ecwni")
orc = NodePath("..")

[connection signal="body_entered" from="EnemyHurtBoxComponent" to="EnemyHurtBoxComponent" method="_on_body_entered"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_entered" from="AttackArea" to="OrcState" method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_attack_area_area_exited"]
[connection signal="area_exited" from="AttackArea" to="OrcState" method="_on_attack_area_area_exited"]
[connection signal="state_entered" from="StateChart/root/walk" to="." method="_on_walk_state_entered"]
[connection signal="state_processing" from="StateChart/root/walk" to="." method="_on_walk_state_processing"]
[connection signal="state_entered" from="StateChart/root/attack" to="." method="_on_attack_state_entered"]
[connection signal="state_processing" from="StateChart/root/attack" to="." method="_on_attack_state_processing"]
[connection signal="state_entered" from="StateChart/root/Rage" to="." method="_on_rage_state_entered"]
[connection signal="state_exited" from="StateChart/root/Rage" to="." method="_on_rage_state_exited"]
[connection signal="timeout" from="rageTimer" to="." method="_on_rage_timer_timeout"]
[connection signal="timeout" from="toRageTimer" to="." method="_on_to_rage_timer_timeout"]
